Agregación de cabecera y pie de la aplicacion

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,38 +1,102 @@
-<mat-toolbar color="primary">
+<div class="contenedor">
+    <mat-toolbar color="primary">
 
-    <div class="logo">
-        <img mat-card-image class="imagenInstagram" src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcSzNXO_pNv15wJ-a6cKeXYiDAZmMFw-mXy6t_2ibuVMRnu6BR4Q" alt="instagram">
-    </div>
-
-    <div class="optionsMenu"> 
-        <a routerLink="home" class="optionMenu" (click)="onSidenavClose()">
-            <mat-icon>home</mat-icon> 
-        </a>
-        <a routerLink="#" class="optionMenu" (click)="onSidenavClose()">
-            <mat-icon>search</mat-icon>
-        </a>
-        <a routerLink="create" class="optionMenu" (click)="onSidenavClose()">
-            <mat-icon>camera_enhance</mat-icon> 
-        </a>
-        <a routerLink="#" class="optionMenu" (click)="onSidenavClose()">
-            <mat-icon>favorite_border</mat-icon>
-        </a>
-        <a routerLink="#" class="optionMenu" (click)="onSidenavClose()">
-            <mat-icon>perm_identity</mat-icon>
-        </a>
-    </div>
-
-
-
-    <!--
-    
         <div class="logo">
-        <img mat-card-image class="imagenInstagram" src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcSzNXO_pNv15wJ-a6cKeXYiDAZmMFw-mXy6t_2ibuVMRnu6BR4Q" alt="instagram">
-    </div>
-    <a mat-button color="primary" routerLink="/create" routerLinkActive="mat-accent">Add!</a>
-    <mat-icon class="example-icon" aria-hidden="false" aria-label="Example add icon">photo</mat-icon>
-
+            <img mat-card-image class="imagenInstagram" src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcSzNXO_pNv15wJ-a6cKeXYiDAZmMFw-mXy6t_2ibuVMRnu6BR4Q" alt="instagram">
+        </div>
+    <!--
+        <div class="optionsMenu"> 
+            <a routerLink="home" class="optionMenu">
+                <mat-icon>home</mat-icon> 
+            </a>
+            <a routerLink="#" class="optionMenu">
+                <mat-icon>search</mat-icon>
+            </a>
+            <a routerLink="create" class="optionMenu">
+                <mat-icon>camera_enhance</mat-icon> 
+            </a>
+            <a routerLink="#" class="optionMenu">
+                <mat-icon>favorite_border</mat-icon>
+            </a>
+            <a routerLink="#" class="optionMenu">
+                <mat-icon>perm_identity</mat-icon>
+            </a>
+        </div>
     -->
-</mat-toolbar>
 
-<mat-divider></mat-divider>
+
+        <!--
+        
+            <div class="logo">
+            <img mat-card-image class="imagenInstagram" src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcSzNXO_pNv15wJ-a6cKeXYiDAZmMFw-mXy6t_2ibuVMRnu6BR4Q" alt="instagram">
+        </div>
+        <a mat-button color="primary" routerLink="/create" routerLinkActive="mat-accent">Add!</a>
+        <mat-icon class="example-icon" aria-hidden="false" aria-label="Example add icon">photo</mat-icon>
+
+        -->
+    </mat-toolbar>
+    <mat-divider></mat-divider>
+</div>
+
+
+
+<div flex>
+    <div> abc</div>
+    <div> abc</div>
+    <div> abc</div>
+    <div> abc</div>
+    <div> abc</div>
+    <div> abc</div>
+    <div> abc</div>
+    <div> abc</div>
+    <div> abc</div>
+    <div> abc</div>
+    <div> abc</div>
+    <div> abc</div>
+    <div> abc</div>
+    <div> abc</div>
+    <div> abc</div>
+    <div> abc</div>
+    <div> abc</div>
+    <div> abc</div>
+    <div> abc</div>
+    <div> abc</div>
+    <div> abc</div>
+    <div> abc</div>
+    <div> abc</div>
+    <div> abc</div>
+    <div> abc</div>
+    <div> abc</div>
+    <div> abc</div>
+    <div> abc</div>
+  </div>
+  <div flex>
+    <div> abc</div>
+    <div> abc</div>
+    <div> abc</div>
+    <div> abc</div>
+    <div> abc</div>
+    <div> abc</div>
+    <div> abc</div>
+    <div> abc</div>
+    <div> abc</div>
+    <div> abc</div>
+    <div> abc</div>
+    <div> abc</div>
+    <div> abc</div>
+    <div> abc</div>
+    <div> abc</div>
+    <div> abc</div>
+    <div> abc</div>
+    <div> abc</div>
+    <div> abc</div>
+    <div> abc</div>
+    <div> abc</div>
+    <div> abc</div>
+    <div> abc</div>
+    <div> abc</div>
+    <div> abc</div>
+    <div> abc</div>
+    <div> abc</div>
+    <div> abc</div>
+  </div>
