Añadida la función de guardar las publicaciones en la bbdd de mongodb

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,19 +1,19 @@
 <footer layout="row" class="footer"> 
     <mat-divider></mat-divider>
     <div class="optionsMenu">
-        <a routerLink="home" class="optionMenu">
+        <a routerLink="" routerLinkActive="active" class="optionMenu">
             <mat-icon>home</mat-icon> 
         </a>
-        <a routerLink="#" class="optionMenu">
+        <a routerLink="#" routerLinkActive="active" class="optionMenu">
             <mat-icon>search</mat-icon>
         </a>
-        <a routerLink="create" class="optionMenu">
+        <a routerLink="/create" routerLinkActive="active" class="optionMenu">
             <mat-icon>camera_enhance</mat-icon> 
         </a>
-        <a routerLink="#" class="optionMenu">
+        <a routerLink="#" routerLinkActive="active" class="optionMenu">
             <mat-icon>favorite_border</mat-icon>
         </a>
-        <a routerLink="#" class="optionMenu">
+        <a routerLink="#" routerLinkActive="active" class="optionMenu">
             <mat-icon>perm_identity</mat-icon>
         </a>
     </div>
