--- a/src/app/post/post-list/post-list.component.html
+++ b/src/app/post/post-list/post-list.component.html
@@ -1,22 +1,19 @@
-
-<div> abc</div>
-<div> abc</div>
-<div> abc</div>
-<div> abc</div>
-<div> abc</div>
-<div> abc</div>
-<div> abc</div>
-<div> abc</div>
-<div> abc</div>
-<div> abc</div>
-<div> abc</div>
-<div> abc</div>
-<div> abc</div>
-<div> abc</div>
-<div> abc</div>
-<div> abc</div>
-<div> abc</div>
-<div> abc</div>
-<div> abc</div>
-<div> abc</div>
-<div> abc</div>
+<div *ngIf="dataPosts.length > 0">
+    <mat-card class="example-card" *ngFor="let post of dataPosts">
+    <!--
+        <mat-card-header>
+            <div mat-card-avatar class="example-header-image"></div>
+            <mat-card-title>Shiba Inu</mat-card-title>
+            <mat-card-subtitle>Dog Breed</mat-card-subtitle>
+        </mat-card-header>
+    -->
+        <img mat-card-image [src]="BACKEND_URL_IMAGE+post.image">
+        <mat-card-content class="contenidoPost">
+            <p> {{ post.contenido }} </p>
+        </mat-card-content>
+        <mat-card-actions>
+            <button mat-button>LIKE</button>
+            <button mat-button>SHARE</button>
+        </mat-card-actions>
+    </mat-card>
+</div>
