--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -40,3 +40,22 @@
     margin-left: 4rem;
     margin-right: 4rem;
 }
+
+ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+a {
+    text-decoration: none;
+    color: black;
+}
+
+ul {
+    display: flex;
+}
+
+.spacer {
+    flex: 1 1 auto;
+}
