--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -3,6 +3,18 @@
         <div class="logo">
             <img mat-card-image class="imagenInstagram" src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcSzNXO_pNv15wJ-a6cKeXYiDAZmMFw-mXy6t_2ibuVMRnu6BR4Q" alt="instagram">
         </div>
+        <span class="spacer"></span>
+        <ul>
+            <li *ngIf="!userIsAuthenticated">
+                <a mat-button routerLink="/auth/login" routerLinkActive="mat-accent">Login</a>
+            </li>
+            <li *ngIf="!userIsAuthenticated">
+                <a mat-button routerLink="/auth/signup" routerLinkActive="mat-accent">SignUp</a>
+            </li>
+            <li *ngIf="userIsAuthenticated">
+                <button mat-button (click)="onLogout()">Logout</button>
+            </li>
+        </ul>
     </mat-toolbar>
     <mat-divider></mat-divider>
 </div>
