control de la cabezera y del pie si no encuentra un usuario logueado

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer layout="row" class="footer"> 
+<footer layout="row" class="footer" *ngIf="userIsAuthenticated"> 
     <mat-divider></mat-divider>
     <div class="optionsMenu">
         <a routerLink="" routerLinkActive="active" class="optionMenu">
