--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,16 +1,10 @@
-<div class="contenedor">
+<div class="contenedor" *ngIf="userIsAuthenticated">
     <mat-toolbar color="primary">
         <div class="logo">
             <img mat-card-image class="imagenInstagram" src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcSzNXO_pNv15wJ-a6cKeXYiDAZmMFw-mXy6t_2ibuVMRnu6BR4Q" alt="instagram">
         </div>
         <span class="spacer"></span>
         <ul>
-            <li *ngIf="!userIsAuthenticated">
-                <a mat-button routerLink="/auth/login" routerLinkActive="mat-accent">Login</a>
-            </li>
-            <li *ngIf="!userIsAuthenticated">
-                <a mat-button routerLink="/auth/signup" routerLinkActive="mat-accent">SignUp</a>
-            </li>
             <li *ngIf="userIsAuthenticated">
                 <button mat-button (click)="onLogout()">Logout</button>
             </li>
