creación de publicación con el id del usuario de creación

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -11,7 +11,7 @@
             <mat-icon>camera_enhance</mat-icon> 
         </a>
         <a routerLink="#" routerLinkActive="active" class="optionMenu">
-            <mat-icon>favorite_border</mat-icon>
+            <mat-icon>favorite</mat-icon>
         </a>
         <a routerLink="#" routerLinkActive="active" class="optionMenu">
             <mat-icon>perm_identity</mat-icon>
