--- a/src/app/post/post-list/post-list.component.css
+++ b/src/app/post/post-list/post-list.component.css
@@ -8,5 +8,19 @@
 }
 
 .contenidoPost {
+    text-align: justify;
+}
+
+.contenidoFecha {
     text-align: left;
+    color: grey;
+}
+
+a {
+    text-decoration: none;
+    color: black;
+}
+ 
+a:hover, a:active{
+    color: red;
 }
