--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -14,7 +14,7 @@
             </mat-form-field>
 
             <div class="buttonsForm">
-                <button mat-raised-button color="primary" type="submit" id="botonLogin">Login</button>
+                <button mat-raised-button color="primary" type="submit" id="botonLogin">Iniciar sesión</button>
             </div>
         </form>
     </mat-card-content>
