modal de error al suceder un error inesperado

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,9 @@
 <div class="contenedor" *ngIf="userIsAuthenticated">
     <mat-toolbar color="primary">
         <div class="logo">
-            <img mat-card-image class="imagenInstagram" src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcSzNXO_pNv15wJ-a6cKeXYiDAZmMFw-mXy6t_2ibuVMRnu6BR4Q" alt="instagram">
+            <a routerLink="" routerLinkActive="active">
+                <img mat-card-image class="imagenInstagram" src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcSzNXO_pNv15wJ-a6cKeXYiDAZmMFw-mXy6t_2ibuVMRnu6BR4Q" alt="instagram">
+            </a>
         </div>
         <span class="spacer"></span>
         <ul>
