--- a/src/app/post/post-list/post-list.component.html
+++ b/src/app/post/post-list/post-list.component.html
@@ -2,7 +2,11 @@
     <mat-card class="example-card" *ngFor="let data of dataPosts">
         <mat-card-header>
             <div mat-card-avatar class="example-header-image"></div>
-            <mat-card-title>{{ data.user.nick }}</mat-card-title>
+            <mat-card-title>
+                <a [routerLink]="['/user', data.user.id]" routerLinkActive="active">
+                    {{ data.user.nick }}
+                </a>
+            </mat-card-title>
             <mat-card-subtitle>{{ data.user.nombre }} {{ data.user.apellido }}</mat-card-subtitle>
         </mat-card-header>
         <img mat-card-image [src]="BACKEND_URL_IMAGE+data.post.image">
