--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,20 +1,25 @@
 <div>
-    <mat-card class="example-card">
+    <mat-card class="example-card" *ngIf="usuario">
         <mat-card-header>
             <div class="nick">
-                <h3 class="nickUsuario">Usuario</h3>
+                <h3 class="nickUsuario">{{ usuario["nick"] }}</h3>
             </div>
         </mat-card-header>
         <hr>
         <mat-card-content class="containerUser">
             <div mat-card-avatar class="example-avatar-image"></div>
-            <p>abc</p>
-            <p>abc</p>
-            <p>abc</p>
-            <p>abc</p>
-            <p>abc</p>
-            <p>abc</p>
+            <div class="nameUser">
+                <h3>{{ usuario["nombre"] }} {{ usuario["apellido"] }} </h3>
+            </div>
+            <mat-card-subtitle>{{ usuario["email"] }}</mat-card-subtitle>
 
         </mat-card-content>
     </mat-card>
+
+    <div *ngIf="posts" class="containerPosts">
+        <mat-card class="example-card-posts" *ngFor="let post of posts">
+            <img mat-card-image [src]="BACKEND_URL_IMAGE+post.image">
+        </mat-card>
+    </div>
+
 </div>
