visualizacion de las publicaciones del perfil al hacer clic

--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -18,7 +18,7 @@
 
     <div *ngIf="posts" class="containerPosts">
         <mat-card class="example-card-posts" *ngFor="let post of posts">
-            <img mat-card-image [src]="BACKEND_URL_IMAGE+post.image">
+            <img mat-card-image  (click)="openDialog(usuario, post)" [src]="BACKEND_URL_IMAGE+post.image">
         </mat-card>
     </div>
 
